@@ -23,6 +23,8 @@
      VMS C's RTL has a fully up to date gmtime() and gmtime_r() since V7.1,
      which is the minimum version we support.
      [Richard Levitte]
+  *) Support for SSL_OP_NO_ENCRYPT_THEN_MAC in SSL_CONF_cmd.
+     [Emilia Käsper]
 
  Changes between 1.1.0d and 1.1.0e [16 Feb 2017]
 
